[package]
name = "mtSamples"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.5.0"
anyhow = "1.0.95"
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dirs = "1.0.5"